--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 
     
         <div class="row">
-            <div class="col" style="background-color: red;">
+            <div class="col" style="background-color: red; height: 1000px;">
                 Column
             </div>
         </div>
