--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style2.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -607,6 +606,7 @@
 
     </div>
 
+    <!-- color 6 -->
     <div class="container-fuild" style="background-color: #0e8f84;">
 
         <div class="row d-flex justify-content-center align-items-center text-center gx-0">
@@ -665,8 +665,8 @@
 
     </div>
 
-
-    <div class="container-fuild" style="background-color: #c2e5da; height: 12000px;">
+<!-- color 7 -->
+    <div class="container-fuild" style="background-color: #c2e5da;">
 
         <div class="row d-flex justify-content-center align-items-center gx-0">
             <div class="col-lg-8 col-md-8 col-sm-10 col-10 mx-auto my-5" id="main7text">
@@ -704,7 +704,7 @@
                                         loading="lazy" alt="icon" class="per-offer-deli-tick">
                                 </div>
                                 <div class="main7rightcheckbox col-lg-10 col-md-10 col-sm-10 col-10 mx-auto ">
-                                    Internet's first 'Acquisition Channels Pros & Cons' Blueprint
+                                    Internet's first 'Acquisition Channels Pros & Cons' Blueprint and many more
                                 </div>
                             </div>
                             <div class="main7rightchecktext">
@@ -713,7 +713,7 @@
                                         loading="lazy" alt="icon" class="per-offer-deli-tick">
                                 </div>
                                 <div class="main7rightcheckbox col-lg-10 col-md-10 col-sm-10 col-10 mx-auto">
-                                    A bulletproof performance marketer's toolkit is the best learn
+                                    A bulletproof performance marketer's toolkit is the best to learn and enjoyable
                                 </div>
                             </div>
                             <div class="main7rightchecktext">
@@ -722,7 +722,7 @@
                                         loading="lazy" alt="icon" class="per-offer-deli-tick">
                                 </div>
                                 <div class="main7rightcheckbox col-lg-10 col-md-10 col-sm-10 col-10 mx-auto">
-                                    GrowthSchool.io's Proprietary High-converting landing page framework
+                                    GrowthSchool.io's Proprietary High-converting landing page to framework
                                 </div>
                             </div>
                             <div class="main7rightchecktext">
@@ -768,6 +768,7 @@
 
 
         <div class="dropdowndiv">
+
             <div class="dropdown">
                 <button class="dropbtn" onclick="toggleDropdown(event)">When does the workshop start?</button>
                 <div class="dropdown-content">
@@ -775,22 +776,129 @@
                         page.</a>
                 </div>
             </div>
+
+            <div class="dropdown">
+                <button class="dropbtn" onclick="toggleDropdown(event)">Will this be live or pre-recorded?</button>
+                <div class="dropdown-content">
+                    <a>No, it’s better! :)
+                        Here’s why:
+                        This is an Interactive GrowthSchool experience in which you will be learning practical
+                        concepts taught by your mentor. You will be attending this stream with like-minded doers
+                        like you, while participating in polls, answering thought-provoking questions, attempting
+                        quizzes, and doing many more exciting activities.By the end of the value-packed session, you
+                        will have a roadmap to reach your desired outcomes</a>
+                </div>
+            </div>
+
+            <div class="dropdown">
+                <button class="dropbtn" onclick="toggleDropdown(event)">What are the timings?</button>
+                <div class="dropdown-content">
+                    <a>You can get all the details related to the timings and dates of the workshop on the top of
+                        the page.</a>
+                </div>
+            </div>
+
+            <div class="dropdown">
+                <button class="dropbtn" onclick="toggleDropdown(event)">I have a full time job, not sure if I can
+                    make it. Will you be sharing recordings?</button>
+                <div class="dropdown-content">
+                    <a>The workshop is over the weekend, so your work will not be hampered. But the sessions will
+                        not be recorded</a>
+                </div>
+            </div>
+
+            <div class="dropdown">
+                <button class="dropbtn" onclick="toggleDropdown(event)">Do you have an affiliate program?</button>
+                <div class="dropdown-content">
+                    <a>As of now. We don’t.</a>
+                </div>
+            </div>
+
+
+            <div class="dropdown">
+                <button class="dropbtn" onclick="toggleDropdown(event)">Can I download the videos?</button>
+                <div class="dropdown-content">
+                    <a>No, you can only attend them from the registration link which will be provided 2 hours before
+                        the workshop</a>
+                </div>
+            </div>
+
+
+            <div class="dropdown">
+                <button class="dropbtn" onclick="toggleDropdown(event)">I made the payment but didn’t receive any
+                    email.</button>
+                <div class="dropdown-content">
+                    <a>Please write to: hi@growthschool.io and our awesome support team will get back to you in
+                        under 6 hours.</a>
+                </div>
+            </div>
+
+
+            <div class="dropdown">
+                <button class="dropbtn" onclick="toggleDropdown(event)">When can I receive the bonus?</button>
+                <div class="dropdown-content">
+                    <a>You will receive all the bonuses within 48 hours once the workshop is done.</a>
+                </div>
+            </div>
+
+
+            <div class="dropdown">
+                <button class="dropbtn" onclick="toggleDropdown(event)">What is the time zone?</button>
+                <div class="dropdown-content">
+                    <a>It is IST(Indian Standard Time).</a>
+                </div>
+            </div>
         </div>
 
-        
+
+        <div class="row d-flex justify-content-center align-items-center text-center gx-0 ">
+            <div class="col-lg-6 col-md-8 col-sm-8 col-8 mx-auto my-5 main2btn" id="main5btn">
+                <div>Reserved Seat for ₹299<sub><strike> ₹1999</strike></sub></div>
+            </div>
+        </div>
+
+        <div class="row d-flex justify-content-center align-items-center text-center gx-0 ">
+            <div class="col-lg-11 col-md-11 col-sm-11 col-11 mx-auto my-2">
+                <div id="main5text3">Reserve a seat before April 17, 2024 to unlock</div>
+            </div>
+        </div>
+
+    </div>
 
 
+    <div class="container-fuild" style="background-color:rgba(31, 62, 51, 0.827)">
+
+        <div class="row d-flex justify-content-center align-items-center text-center gx-0 ">
+            <div class="col-lg-11 col-md-11 col-sm-11 col-10 mx-auto my-5">
+                <div class="main8imges">
+                    <img src="https://assets-global.website-files.com/62555d632aa296260711a2b3/62b9011c0ac0e9603375bf6b_GS%20Logo%20Full.svg"
+                        alt="" width="96">
+                    <img src="https://assets-global.website-files.com/5fdb2866020c200cd7fd7369/65ddc6e10e348f4864e0e32a_Frame%201430103387.svg"
+                        alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="row d-flex justify-content-center align-items-center text-center gx-0 ">
+            <div class="col-lg-8 col-md-11 col-sm-11 col-10 mx-auto main8text">
+
+                    For any support, please mail to hi@growthschool.io. Our support team will get back to you within 24 hours.
+                    The brands and companies that the instructors of growthschool are working or have worked, have no relation
+                    what so ever with Growthschool
+
+            </div>
+        </div>
+
+    </div>
 
 
+    <div class="container-fuild" style="background-color: #032d30;">
 
-
-
-
-
-
-
-
-
+        <div class="row d-flex justify-content-center align-items-center text-center gx-0 ">
+            <div class="col-lg-11 col-md-11 col-sm-11 col-10 mx-auto my-2" style="color: white;">
+                <small>©️ 2024 Growthschool.io. All rights reserved.</small>
+            </div>
+        </div>
 
 
     </div>
