--- a/index.html
+++ b/index.html
@@ -760,6 +760,10 @@
             </div>
         </div>
 
+    </div>
+
+    <!-- color 7 including -->
+    <div class="container-fuild" style="background-color: #c2e5da;">
         <div class="row d-flex justify-content-center align-items-center text-center gx-0 ">
             <div class="col-lg-11 col-md-11 col-sm-11 col-11 mx-auto my-5" id="main7div2text">
                 Frequently Asked Questions
@@ -866,7 +870,6 @@
                 <div id="main5text3">Reserve a seat before April 17, 2024 to unlock</div>
             </div>
         </div>
-
     </div>
 
 
