--- a/index.html
+++ b/index.html
@@ -763,7 +763,8 @@
     </div>
 
     <!-- color 7 including -->
-    <div class="container-fuild" style="background-color: #c2e5da;">
+    <div class="container-fuild" style="background-color: #519982;">
+        
         <div class="row d-flex justify-content-center align-items-center text-center gx-0 ">
             <div class="col-lg-11 col-md-11 col-sm-11 col-11 mx-auto my-5" id="main7div2text">
                 Frequently Asked Questions
